# eiskaltdcpp-py

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  integration.yml  wheels.yml
examples/: basic_chat.py  download_progress.py  file_list_browser.py  multi_hub_bot.py  remote_client.py  search_and_download.py  share_manager.py
examples/lua/: README.md  auto_greet.lua  chat_commands.lua  chat_logger.lua  hub_monitor.lua  spam_filter.lua
python/eiskaltdcpp/: __init__.py  async_client.py  cli.py  dc_client.py  event_meta.py  exceptions.py  hub_aliases.py  protocol.py  search_store.py
python/eiskaltdcpp/api/: __init__.py  __main__.py  app.py  auth.py  client.py  dashboard.py  dependencies.py  models.py  websocket.py
python/eiskaltdcpp/api/routes/: __init__.py  adl.py  auth.py  chat.py  connectivity.py  crypto.py  favorites.py  finished.py  hubs.py  ipfilter.py  logs.py  lua.py  queue.py  search.py  settings.py  shares.py  status.py  throttle.py
src/: CMakeLists.txt  bridge.cpp  bridge.h  bridge_listeners.cpp  bridge_listeners.h  callbacks.h  dcpp_compat.h  eispy_context.cpp  eispy_context.h  listener_adapters.h  types.h
src/extra/: lunar.h
swig/: CMakeLists.txt  copy_runtime_dlls.cmake  dc_core.i  dcpp_adl_search.i  dcpp_client_manager.i  dcpp_connection_manager.i  dcpp_connectivity.i  dcpp_context.i  dcpp_context_base.i  dcpp_crypto_manager.i  dcpp_debug_manager.i  dcpp_download_manager.i  dcpp_dyndns.i  dcpp_favorite_manager.i  dcpp_finished_manager.i  dcpp_hash_manager.i  dcpp_ipfilter.i  dcpp_listeners.i  dcpp_log_manager.i  dcpp_queue_manager.i  dcpp_search_manager.i  dcpp_settings.i  dcpp_share_manager.i  dcpp_throttle_manager.i  dcpp_types.i  dcpp_upload_manager.i  eispy_context.i
tests/: CMakeLists.txt  conftest.py  dc_worker.py  test_api.py  test_async_lifecycle.py  test_cli.py  test_cli_remote.py  test_client.py  test_dashboard.py  test_dc_core.py  test_examples_integration.py  test_file_transfer.py  test_hub_aliases.py  test_integration.py  test_lua_integration.py  test_remote_client_integration.py  test_rest_phase2.py  test_search_store.py  test_swig_listeners.py  test_swig_managers.py  test_websocket.py
