[build-system]
requires = ["scikit-build-core>=0.10", "swig>=4.0"]
build-backend = "scikit_build_core.build"

[project]
name = "eiskaltdcpp-py"
version = "2.4.2"
description = "Python bindings for libeiskaltdcpp — full-featured DC (Direct Connect) client"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    {name = "transfix"},
]
keywords = ["dc", "direct-connect", "nmdc", "adc", "p2p", "file-sharing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Communications :: File Sharing",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "pydantic>=2.0",
]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-timeout>=2.2",
]
api-test = [
    "httpx>=0.25",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-timeout>=2.2",
    "httpx>=0.25",
    "ruff>=0.4",
]

[project.scripts]
eispy = "eiskaltdcpp.cli:main"
eiskaltdcpp-api = "eiskaltdcpp.api.__main__:main"

[project.urls]
Homepage = "https://github.com/transfix/eiskaltdcpp-py"
Repository = "https://github.com/transfix/eiskaltdcpp-py"
Issues = "https://github.com/transfix/eiskaltdcpp-py/issues"
Changelog = "https://github.com/transfix/eiskaltdcpp-py/releases"

# --- scikit-build-core settings ---

[tool.scikit-build]
cmake.version = ">=3.14"
cmake.build-type = "Release"
wheel.packages = ["python/eiskaltdcpp"]
wheel.install-dir = "eiskaltdcpp"
install.components = ["PythonModule"]

[tool.scikit-build.cmake.define]
BUILD_TESTS = "OFF"

# --- Poetry settings ---
# Poetry uses these to locate packages for editable installs (poetry install).
# The actual wheel build is handled by scikit-build-core above.

[tool.poetry]
packages = [{include = "eiskaltdcpp", from = "python"}]

# --- pytest ---

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short -m 'not integration'"
markers = [
    "integration: live hub integration tests (require network access)",
]
asyncio_mode = "auto"
